<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Todo App</string>
    <string name="header_my_tasks">Tasks</string>
    <string name="empty_tasks_message">You haven\'t added any tasks yet. You can add a new task by clicking the \\n\\n+ button.</string>
    <string name="dialog_add_task_title">Add New Task</string>
    <string name="dialog_edit_task_title">Update Task</string>
    <string name="dialog_delete_task_title">Delete Task</string>
    <string name="dialog_delete_task_message">Are you sure you want to delete this task?</string>
    <string name="hint_task_title">Task Title *</string>
    <string name="hint_task_description">Description (Optional)</string>
    <string name="required_field">* Required Field</string>
    <string name="btn_add">Add</string>
    <string name="btn_update">Update</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_cancel">Cancel</string>
    <string name="cd_add_task">Add new task</string>
    <string name="cd_delete_task">Delete task</string>
    <string name="cd_task_completed">Task is completed</string>
    <string name="toast_task_added">Task added</string>
    <string name="toast_task_updated">Task Updated</string>
    <string name="toast_task_deleted">Task Deleted</string>
    <string name="toast_title_required">Task title can not be blank!</string>
    <string name="toast_error_loading">An error occurred while loading tasks</string>
    <string name="toast_error_saving">An error occurred while saving tasks</string>
    <string name="no_description">No description</string>
</resources>